src/objects/RoomsStatus__c.object
<CustomObject>
    <description>Status of Guest Room - Trouble Room and Renewal Room</description>
    <fields>
        <fullName>BeginTime__c</fullName>
        <label>管理開始時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancelDay__c</fullName>
        <label>故障自動解除日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckItem10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>内窓清掃</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckItem11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>クイックルワイパー使用</description>
        <label>廊下清掃</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckItem12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>廊下、畳</description>
        <label>床拭き掃除</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CleanStatus__c</fullName>
        <label>清掃ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未清掃</fullName>
                </value>
                <value>
                    <fullName>清掃中</fullName>
                </value>
                <value>
                    <fullName>清掃完了インスペ未完</fullName>
                </value>
                <value>
                    <fullName>インスペ中</fullName>
                </value>
                <value>
                    <fullName>インスペ完</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <label>説明</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>終了時刻（RFU)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsStockSyncTarget__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>該当項目はチェックすると、在庫故障データは連携対象になる</inlineHelpText>
        <label>在庫調整対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverTime__c</fullName>
        <label>管理終了時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>処理結果</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>修理中</fullName>
                </value>
                <value>
                    <fullName>修理済</fullName>
                </value>
                <value>
                    <fullName>未清掃</fullName>
                </value>
                <value>
                    <fullName>清掃済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoomRef__c</fullName>
        <label>お部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>部屋状態管理</relationshipLabel>
        <relationshipName>RoomRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>開始時刻（RFU)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusBeginDateIntKey__c</fullName>
        <description>管理開始日はインデックスを利用するため、日付情報を格納する</description>
        <externalId>true</externalId>
        <label>管理開始日2（検索キー）</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusBeginDateKey__c</fullName>
        <externalId>true</externalId>
        <label>管理開始日（検索キー）</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusBeginDate__c</fullName>
        <inlineHelpText>該当ステータス開始日</inlineHelpText>
        <label>管理開始日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusEndDateIntKey__c</fullName>
        <description>管理終了日はインデックスを利用するため、日付情報を格納する</description>
        <externalId>true</externalId>
        <label>管理終了日2（検索キー）</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusEndDateKey__c</fullName>
        <externalId>true</externalId>
        <label>管理終了日（検索キー）</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusEndDate__c</fullName>
        <inlineHelpText>該当ステータス終了日</inlineHelpText>
        <label>管理終了日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>故障</fullName>
                </value>
                <value>
                    <fullName>清掃</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfRoomTypeId__c</fullName>
        <formula>RoomRef__r.TypeRoomRef__c</formula>
        <label>部屋タイプID</label>
        <type>Text</type>
    </fields>
    <label>部屋状態管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RoomRef__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>BeginTime__c</columns>
        <columns>StatusBeginDate__c</columns>
        <columns>OverTime__c</columns>
        <columns>StatusEndDate__c</columns>
        <columns>EndTime__c</columns>
        <columns>Result__c</columns>
        <columns>CleanStatus__c</columns>
        <columns>Describe__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>部屋状態管理名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MAX_TERM_CHECK</fullName>
        <active>true</active>
        <errorConditionFormula>(YEAR( StatusEndDate__c ) - YEAR( StatusBeginDate__c ) ) &gt; 10</errorConditionFormula>
        <errorMessage>開始、終了期間が制限を超えました、分割リクエストしてください。</errorMessage>
    </validationRules>
</CustomObject>